base/harbor/ingress/ingress.yaml
---
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "harbor-helm-harbor-ingress"
  labels:
    heritage: Helm
    release: harbor-helm
    chart: harbor
    app: "harbor"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: "harbor-helm-harbor-ingress"
    hosts:
    - core.harbor.domain
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: harbor-helm-harbor-portal
          servicePort: 80
      - path: /api/
        backend:
          serviceName: harbor-helm-harbor-core
          servicePort: 80
      - path: /service/
        backend:
          serviceName: harbor-helm-harbor-core
          servicePort: 80
      - path: /v2/
        backend:
          serviceName: harbor-helm-harbor-core
          servicePort: 80
      - path: /chartrepo/
        backend:
          serviceName: harbor-helm-harbor-core
          servicePort: 80
      - path: /c/
        backend:
          serviceName: harbor-helm-harbor-core
          servicePort: 80
    host: core.harbor.domain
